--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
         <header class="header-border">
             <div class="container main-header">
                 <nav class="main-nav">
-                    <a class="main-logo" href="index.html"
-                        ><span class="text-blue">Web</span>Studio</a
+                    <a class="logo" href="index.html"
+                        ><span class="logo__web">Web</span>Studio</a
                     >
-                    <ul class="site-navigation">
-                        <li><a class="underline" href="#">Agencja</a></li>
+                    <ul class="site-nav">
+                        <li><a class="site-nav__content __content--underline" href="#">Agencja</a></li>
                         <li>
-                            <a href="./portfolio.html">Portfolio</a>
+                            <a  class="site-nav__content"  href="./portfolio.html">Portfolio</a>
                         </li>
-                        <li><a href="#">Kontakt</a></li>
+                        <li><a  class="site-nav__content"  href="#">Kontakt</a></li>
                     </ul>
                 </nav>
                 <div class="contact-links">
-                    <a href="mailto:info@devstudio.com"
-                        ><svg class="icon-header" width="16" height="12">
+                    <a class="contact-links__content href="mailto:info@devstudio.com"
+                        ><svg class="__content--icon" width="16" height="12">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com</a
                     >
-                    <a href="tel:+48111111111">
-                        <svg class="icon-header" width="16" height="16">
+                    <a class="contact-links__content href="tel:+48111111111">
+                        <svg class="__content--icon" width="16" height="16">
                             <use
                                 href="./images/icons.svg#icon-smartphone"
                             ></use>
@@ -52,11 +52,11 @@
             <!--Header-->
             <section class="hero-section section">
                 <div class="hero-section-container container">
-                    <h1>
+                    <h1 class="__main">
                         EFEKTYWNE ROZWIĄZANIA<br />
                         DLA WASZEGO BIZNESU
                     </h1>
-                    <button class="modal-btn" type="button" data-modal-open>
+                    <button class="modal-btn __btn" type="button" data-modal-open>
                         Zamów usługe
                     </button>
                 </div>
@@ -67,60 +67,60 @@
                 <div class="container">
                     <ul class="usp-blocks">
                         <li>
-                            <div class="usp-icon-wrapper">
-                                <svg class="icon-blocks" width="70" height="70">
+                            <div class="__wrapper">
+                                <svg width="70" height="70">
                                     <use
                                         href="./images/icons.svg#icon-antenna"
                                     ></use>
                                 </svg>
                             </div>
-                            <h3>LOREM IPSUM</h3>
-                            <p>
+                            <h3 class="usp-blocks__titel">LOREM IPSUM</h3>
+                            <p class="__content">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit. Nam vel arcu sem. Sed non
                                 sodales dui. Interdum et malesuada
                             </p>
                         </li>
                         <li>
-                            <div class="usp-icon-wrapper">
-                                <svg class="icon-blocks" width="70" height="70">
+                            <div class="__wrapper">
+                                <svg width="70" height="70">
                                     <use
                                         href="./images/icons.svg#icon-clock"
                                     ></use>
                                 </svg>
                             </div>
-                            <h3>LOREM IPSUM</h3>
-                            <p>
+                            <h3 class="usp-blocks__titel">LOREM IPSUM</h3>
+                            <p class="__content">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit. Nam vel arcu sem. Sed non
                                 sodales dui. Interdum et malesuada
                             </p>
                         </li>
                         <li>
-                            <div class="usp-icon-wrapper">
-                                <svg class="icon-blocks" width="70" height="70">
+                            <div class="__wrapper">
+                                <svg width="70" height="70">
                                     <use
                                         href="./images/icons.svg#icon-diagram"
                                     ></use>
                                 </svg>
                             </div>
-                            <h3>LOREM IPSUM</h3>
-                            <p>
+                            <h3 class="usp-blocks__titel">LOREM IPSUM</h3>
+                            <p class="__content">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit. Nam vel arcu sem. Sed non
                                 sodales dui. Interdum et malesuada
                             </p>
                         </li>
                         <li>
-                            <div class="usp-icon-wrapper">
-                                <svg class="icon-blocks" width="70" height="70">
+                            <div class="__wrapper">
+                                <svg width="70" height="70">
                                     <use
                                         href="./images/icons.svg#icon-astronaut"
                                     ></use>
                                 </svg>
                             </div>
-                            <h3>LOREM IPSUM</h3>
-                            <p>
+                            <h3 class="usp-blocks__titel">LOREM IPSUM</h3>
+                            <p class="__content">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit. Nam vel arcu sem. Sed non
                                 sodales dui. Interdum et malesuada
@@ -134,43 +134,43 @@
 
             <section class="items-grid section">
                 <div class="container">
-                    <h2>Czym sie zajmujemy</h2>
-                    <ul class="item-grid-wrapper">
+                    <h2 class="items-grid__titel">Czym sie zajmujemy</h2>
+                    <ul class="item-grid__wrapper">
                         <li>
-                            <div class="grid-position">
-                                <img
+                            <div class="__position">
+                                <img class="__position--photo"
                                     src="images/programming.jpg"
                                     alt="Programista pracujacy przy swoim biurku"
                                     width="370"
                                     height="294"
                                 />
-                                <p class="grid-position-text">
+                                <p class="__position-content">
                                     APLIKACJE KOMPUTEROWE
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <div class="grid-position">
-                                <img
+                            <div class="__position">
+                                <img class="__position--photo"
                                     src="images/applications.jpg"
                                     alt="Programista tworzy design aplikacji"
                                     width="370"
                                     height="294"
                                 />
-                                <p class="grid-position-text">
+                                <p class="__position-content">
                                     APLIKACJE MOBILNE
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <div class="grid-position">
-                                <img
+                            <div class="__position">
+                                <img class="__position--photo"
                                     src="images/design.jpg"
                                     alt="Programista wybiera barwe kolorystyczna do design"
                                     width="370"
                                     height="294"
                                 />
-                                <p class="grid-position-text">
+                                <p class="__position-content">
                                     ROZWIĄZANIA GRAFICZNE
                                 </p>
                             </div>
@@ -183,9 +183,9 @@
 
             <section class="section-list-team section">
                 <div class="list-team container">
-                    <h2>Nasz Zespol</h2>
-                    <ul class="list-team-wrapper">
-                        <li>
+                    <h2 class="list-team__titel">Nasz Zespol</h2>
+                    <ul class="__wrapper">
+                        <li class="__wrapper-content">
                             <img
                                 src="images/producktdesigner.jpg"
                                 alt="Usmiechniety John Doe"
@@ -193,15 +193,15 @@
                                 height="260"
                             />
 
-                            <span class="list-team-worker">John Doe</span>
-                            <span class="list-team-position"
+                            <span class="__--worker">John Doe</span>
+                            <span class="__--position"
                                 >Produckt Designer</span
                             >
-                            <ul class="team-icon-wrapper">
+                            <ul class="__wrapper-content__team-icon">
                                 <li>
-                                    <a href="#"
+                                    <a class="__list-icon" href="#"
                                         ><svg
-                                            class="list-team-icon"
+                                            class="__--icon"
                                             width="20"
                                             height="20"
                                         >
@@ -212,9 +212,9 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#"
+                                    <a class="__list-icon" href="#"
                                         ><svg
-                                            class="list-team-icon"
+                                            class="__--icon"
                                             width="20"
                                             height="20"
                                         >
@@ -226,9 +226,9 @@
                                 </li>
 
                                 <li>
-                                    <a href="#"
+                                    <a class="__list-icon" href="#"
                                         ><svg
-                                            class="list-team-icon"
+                                            class="__--icon"
                                             width="20"
                                             height="20"
                                         >
@@ -239,9 +239,9 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#"
+                                    <a class="__list-icon" href="#"
                                         ><svg
-                                            class="list-team-icon"
+                                            class="__--icon"
                                             width="20"
                                             height="20"
                                         >
