--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!--Nasze atuty-->
             <section class="usps">
                 <div class="usps__container container">
-                    <ul class="usp__list">
+                    <ul class="usps__list">
                         <li class="usps__item">
                             <div class="usps__icon-wrapper">
                                 <svg class="usps__icon" width="70" height="70">
@@ -74,7 +74,7 @@
                                     ></use>
                                 </svg>
                             </div>
-                            <h3 class="usp__list-titel">LOREM IPSUM</h3>
+                            <h3 class="usps__list-titel">LOREM IPSUM</h3>
                             <p class="usps__list-content">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit. Nam vel arcu sem. Sed non
@@ -89,7 +89,7 @@
                                     ></use>
                                 </svg>
                             </div>
-                            <h3 class="usp__list-titel">LOREM IPSUM</h3>
+                            <h3 class="usps__list-titel">LOREM IPSUM</h3>
                             <p class="usps__list-content">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit. Nam vel arcu sem. Sed non
@@ -104,7 +104,7 @@
                                     ></use>
                                 </svg>
                             </div>
-                            <h3 class="usp__list-titel">LOREM IPSUM</h3>
+                            <h3 class="usps__list-titel">LOREM IPSUM</h3>
                             <p class="usps__list-content">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit. Nam vel arcu sem. Sed non
@@ -119,7 +119,7 @@
                                     ></use>
                                 </svg>
                             </div>
-                            <h3 class="usp__list-titel">LOREM IPSUM</h3>
+                            <h3 class="usps__list-titel">LOREM IPSUM</h3>
                             <p class="usps__list-content">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit. Nam vel arcu sem. Sed non
@@ -674,11 +674,10 @@
                             <a class="modal__form-rules-link" href="#">Regulamin</a> i
                             <a class="modal__form-rules-link" href="#"
                                 >Politykę Prywatności.</a
-                            ></span
-                        >
+                            ></span>
                     </label>
-                    <button class="modal__form-btn" type="submit">Wyślij</button>
                 </form>
+                <button class="modal__send-btn" type="submit">Wyślij</button>
             </div>
         </div>
         <script src="./js/modal.js"></script>
